--- a/src/app/module/dash-board/modules/item/item.component.html
+++ b/src/app/module/dash-board/modules/item/item.component.html
@@ -1,1 +1,21 @@
-<p>item works!</p>
+<div class="main-wrap">
+  <h2 class="header-text">Item Management</h2>
+  <hr>
+  <mat-tab-group>
+    <mat-tab label="Save Item">
+      <app-save-item></app-save-item>
+    </mat-tab>
+    <mat-tab label="Update Item">
+      <app-update-item></app-update-item>
+    </mat-tab>
+    <mat-tab label="Delete Item">
+      <app-delete-item></app-delete-item>
+    </mat-tab>
+    <mat-tab label="Search Item">
+      <app-search-item></app-search-item>
+    </mat-tab>
+    <mat-tab label="Get All Items">
+      <app-get-all-items></app-get-all-items>
+    </mat-tab>
+  </mat-tab-group>
+</div>
